--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -5,7 +5,7 @@
     {
       "src": "/v1/api(.*)",
       "dest": "/index.js",
-      "methods": ["GET"],
+      "methods": ["GET, POST, PUT, DELETE"],
       "headers": {
         "Access-Control-Allow-Origin": "*",
         "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept, Authorization",
@@ -15,7 +15,7 @@
     {
       "src": "/v1/api",
       "dest": "/index.js",
-      "methods": ["GET"]
+      "methods": ["GET, POST, PUT, DELETE"]
     }
   ]
 }
