--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -5,17 +5,12 @@
     {
       "src": "/v1/api(.*)",
       "dest": "/index.js",
-      "methods": ["GET, POST, PUT, DELETE"],
+      "methods": ["GET", "POST", "PUT", "DELETE"],
       "headers": {
         "Access-Control-Allow-Origin": "*",
         "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept, Authorization",
         "Access-Control-Allow-Credentials": "true"
       }
-    },
-    {
-      "src": "/v1/api",
-      "dest": "/index.js",
-      "methods": ["GET, POST, PUT, DELETE"]
     }
   ]
 }
