--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -7,7 +7,7 @@
       "dest": "/index.js",
       "methods": ["GET", "POST", "PUT", "DELETE"],
       "headers": {
-        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Origin": "https://quizzly-quiz.vercel.app",
         "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept, Authorization",
         "Access-Control-Allow-Credentials": "true"
       }
