--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,7 +3,7 @@
   "builds": [{ "src": "index.js", "use": "@vercel/node" }],
   "routes": [
     {
-      "src": "/v1/api(.*)",
+      "src": "/v1/api/(.*)",
       "dest": "/index.js",
       "methods": ["GET", "POST", "PUT", "DELETE"],
       "headers": {
