Worked on vercel.json

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -5,12 +5,17 @@
     {
       "src": "/(.*)",
       "dest": "/index.js",
-      "methods": ["GET", "POST", "PUT", "DELETE"],
+      "methods": ["GET"],
       "headers": {
         "Access-Control-Allow-Origin": "*",
         "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept, Authorization",
         "Access-Control-Allow-Credentials": "true"
       }
+    },
+    {
+      "src": "/",
+      "dest": "/index.js",
+      "methods": ["GET"]
     }
   ]
 }
