--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,9 +3,14 @@
   "builds": [{ "src": "index.js", "use": "@vercel/node" }],
   "routes": [
     {
-      "src": "/v1/api/(.*)",
+      "src": "/(.*)",
       "dest": "/index.js",
-      "methods": ["GET", "POST"]
+      "methods": ["GET", "POST", "PUT", "DELETE"],
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept, Authorization",
+        "Access-Control-Allow-Credentials": "true"
+      }
     }
   ]
 }
