--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,9 +3,9 @@
   "builds": [{ "src": "index.js", "use": "@vercel/node" }],
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/V1/api/(.*)",
       "dest": "/index.js",
-      "methods": ["GET", "POST", "PUT", "DELETE"],
+      "methods": ["GET", "PUT", "POST"],
       "headers": {
         "Access-Control-Allow-Origin": "*",
         "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept, Authorization",
