--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,15 +2,20 @@
   "version": 2,
   "builds": [{ "src": "index.js", "use": "@vercel/node" }],
   "headers": [
-    { "key": "Access-Control-Allow-Credentials", "value": "true" },
-    { "key": "Access-Control-Allow-Origin", "value": "*" },
     {
-      "key": "Access-Control-Allow-Methods",
-      "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT"
-    },
-    {
-      "key": "Access-Control-Allow-Headers",
-      "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
+      "source": "/v1/api/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Credentials", "value": "true" },
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
+        }
+      ]
     }
   ]
 }
