--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -5,9 +5,9 @@
     {
       "src": "/(.*)",
       "dest": "/index.js",
-      "methods": ["GET"],
+      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"],
       "headers": {
-        "Access-Control-Allow-Origin": "https://quizzly-quiz.vercel.app/",
+        "Access-Control-Allow-Origin": "*",
         "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept, Authorization",
         "Access-Control-Allow-Credentials": "true"
       }
