--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.26.0",
     "framer-motion": "^6.2.7",
     "react": "^17.0.2",
+    "react-confetti": "^6.0.1",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-lottie": "^1.2.3",
