Testing Crypto in React/Vercel

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,9 @@
       "react-app/jest"
     ]
   },
+  "browser": {
+    "crypto": false
+  },
   "browserslist": {
     "production": [
       ">0.2%",
