--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
-    "crypto-js": "^4.1.1",
+    "crypto-js": "^3.1.9-1",
     "framer-motion": "^6.2.7",
     "react": "^17.0.2",
     "react-confetti": "^6.0.1",
